
[package]
name = "claude-repl-mcp"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-NexVigilant-Proprietary-1.0"
description = "MCP bridge to Claude Code CLI"

[[bin]]
name = "claude-repl-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "1.2"

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
