
[package]
name = "gsheets-mcp"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
description = "MCP server for Google Sheets API v4 with service account JWT auth"

[[bin]]
name = "gsheets-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "1.2"
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
