
[package]
name = "nexcore-bridge-mcp"
version = "1.0.0"
edition = "2024"
description = "MCP bridge connector for NexVigilant Core REST API"

[[bin]]
name = "nexcore-bridge-mcp"
path = "src/main.rs"

[dependencies]
# MCP server framework
rmcp = { version = "0.14", features = ["server", "transport-io"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# HTTP client for connecting to nexcore-api
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

# Environment and CLI
clap = { workspace = true, features = ["derive", "env"] }
url = { workspace = true }

[lints]
workspace = true
