
[package]
name = "nexcore-build-orchestrator"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-NexVigilant-Proprietary-1.0"
description = "Full-stack build orchestrator with CI/CD pipeline, live dashboard, and CLI"

[[bin]]
name = "build-orchestrator"
path = "src/main.rs"
required-features = ["ssr"]

[[bin]]
name = "orchestrator-cli"
path = "bin/orchestrator_cli.rs"

[dependencies]
# Workspace (always)
nexcore-build-gate = { workspace = true }
nexcore-measure = { workspace = true }
nexcore-lex-primitiva = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "env"] }

# SSR-only (optional, workspace)
tokio = { workspace = true, features = ["full"], optional = true }
tokio-stream = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

# SSR-only (direct, NOT workspace — Axum 0.7 for Leptos compat)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["fs", "cors"], optional = true }
leptos = { version = "0.7", optional = true }
leptos_router = { version = "0.7", optional = true }
leptos_meta = { version = "0.7", optional = true }
leptos_axum = { version = "0.7", optional = true }

[features]
default = []
ssr = [
    "leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr",
    "dep:leptos", "dep:leptos_router", "dep:leptos_meta", "dep:leptos_axum",
    "dep:axum", "dep:tokio", "dep:tokio-stream",
    "dep:tower", "dep:tower-http", "dep:tracing-subscriber",
]

[lints]
workspace = true
