
[package]
name = "nexcore-control-center"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "NexVigilant Core unified monitoring dashboard - 100% Rust with Ferrostack"

# Standalone - not part of NexCore workspace (different Leptos deps)

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nexcore-control-center"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_axum = { version = "0.7", optional = true }

axum = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower-http = { workspace = true, features = ["fs", "cors"], optional = true }

# HTTP client for API calls
reqwest = { workspace = true, features = ["json"], optional = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# Error handling
anyhow = { workspace = true }

[features]
default = []
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:reqwest",
]
hydrate = [
    "leptos/hydrate",
]

[package.metadata.leptos]
output-name = "nexcore-control-center"
bin-target = "nexcore-control-center"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browser-open = false
