
[package]
name = "nexcore-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Derive macros for NexVigilant Core primitive grounding and tier classification"
license = "MIT"
repository = "https://github.com/nexvigilant/nexcore"
keywords = ["nexcore", "derive", "macros", "primitives", "grounding"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
nexcore-macros-core = { version = "1.0.0", path = "../nexcore-macros-core", registry = "nexcore" }

[lints]
workspace = true
