
[package]
name = "nexcore-os-demo"
version = "0.1.0"
edition = "2024"
description = "NexCore OS init process — boots as PID 1 on bare Linux"
license = "Proprietary"

[[bin]]
name = "nexcore-init"
path = "src/main.rs"

[dependencies]
nexcore-os = { workspace = true }
nexcore-pal = { workspace = true }
nexcore-pal-linux = { workspace = true }
nix = { workspace = true, features = ["signal", "process", "fs", "mount", "reboot", "hostname"] }
chrono = { workspace = true, features = ["serde"] }

[lints]
workspace = true
