
[package]
name = "stem-chem"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Chemistry primitives: reaction kinetics, equilibrium, binding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexvigilant/stem"
keywords = ["chemistry", "kinetics", "equilibrium", "primitives"]
categories = ["science"]
publish = true

[dependencies]
stem-core = { workspace = true }
nexcore-lex-primitiva = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]

[lints]
workspace = true
