[package]
name = "academy-forge"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
repository = "https://github.com/nexvigilant/nexcore"
description = "Extract structured knowledge from NexCore Rust source into IR for Academy and Observatory"

[[bin]]
name = "forge-validate"
path = "src/bin/forge-validate.rs"

[[bin]]
name = "forge-compile"
path = "src/bin/forge-compile.rs"

[dependencies]
# AST parsing
syn = { workspace = true }
quote = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
nexcore-error = { workspace = true }

# File system walking
nexcore-fs = { workspace = true }

# Pattern matching
regex = { workspace = true }

# TOML parsing (Cargo.toml metadata)
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
