
[package]
name = "antitransformer"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
description = "AI text detector via statistical fingerprints — Zipf deviation, entropy uniformity, burstiness dampening, perplexity consistency, TTR anomaly"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
nexcore-error = { workspace = true }
thiserror = { version = "1.0.61" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.11", features = ["derive", "cargo", "env"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
axum = { version = "0.8.0", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "compression-full"] }

[dev-dependencies]
proptest = { version = "1.6.0" }
tower = { version = "0.4.13", features = ["full"] }

[lints.rust]
async_fn_in_trait = "allow"
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"
unused_must_use = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"
map_unwrap_or = "allow"
manual_map = "allow"
option_map_or_none = "allow"
derivable_impls = "allow"
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
todo = "allow"
unimplemented = "allow"
unreachable = "allow"
