
[package]
name = "antitransformer"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
description = "AI text detector via statistical fingerprints — Zipf deviation, entropy uniformity, burstiness dampening, perplexity consistency, TTR anomaly"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
nexcore-error = { workspace = true }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.11", features = ["derive", "cargo", "env"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
axum = { version = "0.8.0", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "compression-full"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["full"] }


[lints]
workspace = true
